--- a/scss/page/product-box.scss
+++ b/scss/page/product-box.scss
@@ -8,6 +8,7 @@
             width: 100%;
             .table-th{
                 padding-top: 0!important;
+                padding-left: 65px;
             }
             .table-tr{
                 display: flex;
@@ -19,6 +20,13 @@
             }
             .product-tr{
                 @include text-styles(16px, 'AvenirHeavy', $gray_color);
+                &:hover{
+                    background-color: #E7E7E7;
+                    color: $black_color;
+                    border-radius: 10px;
+                    padding: 29px 30px 32px 30px;
+                    cursor: pointer;
+                }
             }
         }
         
