--- a/scss/page/aside.scss
+++ b/scss/page/aside.scss
@@ -7,14 +7,28 @@
     box-sizing: border-box;
     max-height: 1135px;
     height: 100%;
+    @media screen and (max-width: 1080px) {
+        padding-right: 5px;
+        padding-left: 5px;
+        width: min-content;
+    }
     .aside-title{
         @include horizontal (space-between);
         flex-wrap: wrap;
+        @media screen and (max-width: 1080px) {
+            justify-content: center;
+        }
         h3{
             font-family: 'AvenirBlack';
             font-size: 24px;
+            @media screen and (max-width: 1080px) {
+                font-size: 14px;
+            }
             span{
                 font-family: 'AvenirBook';
+                @media screen and (max-width: 1080px) {
+                    font-size: 12px;
+                }
             }
         }
         .burger{
@@ -22,6 +36,9 @@
             height: 11px;
             position: relative;
             cursor: pointer;
+            @media screen and (max-width: 1080px) {
+                margin-top: 10px;
+            }
             .divider{
                 width: 26px;
                 height: 1px;
@@ -43,9 +60,16 @@
     }
     .aside-nav-div{
         margin-top: 107px;
+        @media screen and (max-width: 1080px) {
+            margin-top: 50px;
+        }
         .aside-nav-li{
             margin-bottom: 50px;
             @include hover-transition ( .3s);
+            @media screen and (max-width: 1080px) {
+                padding: 5px 0 5px 0;
+                margin-bottom: 10px;
+            }
             &:hover:not(.active){
                 background-color: #FF2288;
                 padding: 15px 0 15px 0;
@@ -53,14 +77,24 @@
             }
             .aside-nav-a{
                 @include align-flex-with-wrap(flex, center, wrap);
+                @media screen and (max-width: 1080px) {
+                    justify-content: center;
+                    flex-direction: column;
+                }
                 img{
                     margin-left: 30px;
+                    @media screen and (max-width: 1080px) {
+                        margin-left: 0;
+                    }
                 }
                 h6{
                     margin-left: 15px;
                     font-size: 16px;
                     font-family: 'AvenirMedium';
                     color: $white_color;
+                    @media screen and (max-width: 1080px) {
+                        margin-left: 0;
+                    }
                 }
             }
         }
@@ -69,6 +103,10 @@
             padding: 15px 0 15px 30px;
             border-radius: 12px;
             margin-bottom: 35px;
+            @media screen and (max-width: 1080px) {
+                padding: 5px 0 5px 0;
+                margin-bottom: 10px;
+            }
             .aside-nav-a img{
                 margin-left: 0;
             }
@@ -78,16 +116,32 @@
         margin: 40px 0 30px 30px;
         font-family: 'AvenirHeavy';
         font-size: 12px;
+        @media screen and (max-width: 1080px) {
+            margin: 30px 10px 30px 0;
+        }
     }
     .aside-following-a{
         @include align-flex-with-wrap(flex, center, wrap);
+        @media screen and (max-width: 1080px) {
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            text-align: center;
+        }
         img{
             margin-left: 30px;
+            @media screen and (max-width: 1080px) {
+                margin-left: 0;
+                margin-bottom: 10px;
+            }
         }
         h6{
             color: $white_color;
             font-size: 16px;
             font-family: 'AvenirMedium';
+            @media screen and (max-width: 1080px) {
+                margin: 0 0 10px 0;
+            }
         }
     }
     .loadMore{
@@ -95,6 +149,11 @@
         font-size: 14px;
         color: $white_color;
         margin-left: 30px;
+        @media screen and (max-width: 1080px) {
+            margin-left: 6px;
+            margin-top: 10px;
+            font-size: 10px;
+        }
     }
     
 }
