--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -2,6 +2,9 @@
     width: 100%;
     .header{
         padding: 30px 90px 0 25px;
+        @media screen and (max-width: 1080px) {
+            padding: 30px 10px 0 10px;
+        }
         .container-flex{
             @include horizontal (space-between);
             display: flex;
@@ -9,8 +12,14 @@
             align-items: center;
             border-bottom: 1px solid $gray_color;
             padding-bottom: 30px;
+            @media screen and (max-width: 1360px) {
+                @include horizontal (center);
+            }
             .search-box{
                 position: relative;
+                @media screen and (max-width: 1080px) {
+                    display: none;
+                }
             }
             .search-box input{
                 background-color: #E7E7E7;
@@ -18,6 +27,10 @@
                 border-radius: 12px;
                 padding: 18px 272px 18px 20px;
                 @include text-styles(14px, 'AvenirHeavy', $black_color);
+                @media screen and (max-width: 1360px) {
+                    padding-right: 0;
+                    margin-right: 10px;
+                }
             }
             .search-box a{
                 position: absolute;
@@ -30,6 +43,13 @@
             }
             
             .nav{
+                @media (max-width: 1080px){
+                    flex-direction: row;
+                    display: flex;
+                    justify-content: space-between;
+                    width: 100%;
+                    align-items: center;
+                }
                 .nav-ul{
                     display: flex;
                     align-items: center;
@@ -61,6 +81,15 @@
                     .nav-right{
                         display: flex;
                         align-items: center;
+                        @media screen and (max-width: 1080px) {
+                            display: none;
+                        }
+                    }
+                }
+                .profile-box{
+                    display: none;
+                    @media screen and (max-width: 1080px) {
+                        display: flex;
                     }
                 }
                 .nav-burger{
@@ -70,6 +99,9 @@
                     cursor: pointer;
                     margin-left: 10px;
                     display: none;
+                    @media screen and (max-width: 1080px) {
+                        display: flex;
+                    }
                     .nav-divider{
                         width: 26px;
                         height: 1px;
