add post nav responsive and change fonts files.

--- a/scss/page/base.scss
+++ b/scss/page/base.scss
@@ -13,6 +13,10 @@
     max-width: 1231px;
     width: 100%;
     margin: 0 auto;
+    @media screen and (max-width: 1370px) {
+        padding: 0 10px;
+        box-sizing: border-box;
+    }
 }
 .flex{
     display: flex;
