--- a/scss/page/base.scss
+++ b/scss/page/base.scss
@@ -14,7 +14,7 @@
     width: 100%;
     margin: 0 auto;
     @media screen and (max-width: 1370px) {
-        padding: 0 10px;
+        padding: 0 10px!important;
         box-sizing: border-box;
     }
 }
