--- a/scss/partials/fonts.scss
+++ b/scss/partials/fonts.scss
@@ -1,49 +1,49 @@
 @font-face {
     font-family: 'AvenirMedium';
-    src: url('../../fonts/AvenirLTPro-Medium.eot');
-    src: url('../../fonts/AvenirLTPro-Medium.eot') format('embedded-opentype'),
-         url('../../fonts/AvenirLTPro-Medium.woff2') format('woff2'),
-         url('../../fonts/AvenirLTPro-Medium.woff') format('woff'),
-         url('../../fonts/AvenirLTPro-Medium.ttf') format('truetype'),
-         url('../../fonts/AvenirLTPro-Medium.svg') format('svg');
+    src: url('../../fonts/AvenirMedium.eot');
+    src: url('../../fonts/AvenirMedium.eot') format('embedded-opentype'),
+         url('../../fonts/AvenirMedium.woff2') format('woff2'),
+         url('../../fonts/AvenirMedium.woff') format('woff'),
+         url('../../fonts/AvenirMedium.ttf') format('truetype'),
+         url('../../fonts/AvenirMedium.svg#AvenirMedium') format('svg');
 }
 
 @font-face {
     font-family: 'AvenirHeavy';
-    src: url('../../fonts/AvenirLTPro-Heavy.eot');
-    src: url('../../fonts/AvenirLTPro-Heavy.eot') format('embedded-opentype'),
-         url('../../fonts/AvenirLTPro-Heavy.woff2') format('woff2'),
-         url('../../fonts/AvenirLTPro-Heavy.woff') format('woff'),
-         url('../../fonts/AvenirLTPro-Heavy.ttf') format('truetype'),
-         url('../../fonts/AvenirLTPro-Heavy.svg') format('svg');
+    src: url('../../fonts/AvenirHeavy.eot');
+    src: url('../../fonts/AvenirHeavy.eot') format('embedded-opentype'),
+         url('../../fonts/AvenirHeavy.woff2') format('woff2'),
+         url('../../fonts/AvenirHeavy.woff') format('woff'),
+         url('../../fonts/AvenirHeavy.ttf') format('truetype'),
+         url('../../fonts/AvenirHeavy.svg#AvenirHeavy') format('svg');
 }
 
 @font-face {
     font-family: 'AvenirBook';
-    src: url('../../fonts/AvenirLTPro-Book.eot');
-    src: url('../../fonts/AvenirLTPro-Book.eot') format('embedded-opentype'),
-         url('../../fonts/AvenirLTPro-Book.woff2') format('woff2'),
-         url('../../fonts/AvenirLTPro-Book.woff') format('woff'),
-         url('../../fonts/AvenirLTPro-Book.ttf') format('truetype'),
-         url('../../fonts/AvenirLTPro-Book.svg') format('svg');
+    src: url('../../fonts/AvenirBook.eot');
+    src: url('../../fonts/AvenirBook.eot') format('embedded-opentype'),
+         url('../../fonts/AvenirBook.woff2') format('woff2'),
+         url('../../fonts/AvenirBook.woff') format('woff'),
+         url('../../fonts/AvenirBook.ttf') format('truetype'),
+         url('../../fonts/AvenirBook.svg#AvenirBook') format('svg');
 }
 
 @font-face {
     font-family: 'AvenirBlack';
-    src: url('../../fonts/AvenirLTPro-Black.eot');
-    src: url('../../fonts/AvenirLTPro-Black.eot') format('embedded-opentype'),
-         url('../../fonts/AvenirLTPro-Black.woff2') format('woff2'),
-         url('../../fonts/AvenirLTPro-Black.woff') format('woff'),
-         url('../../fonts/AvenirLTPro-Black.ttf') format('truetype'),
-         url('../../fonts/AvenirLTPro-Black.svg') format('svg');
+    src: url('../../fonts/AvenirBlack.eot');
+    src: url('../../fonts/AvenirBlack.eot') format('embedded-opentype'),
+         url('../../fonts/AvenirBlack.woff2') format('woff2'),
+         url('../../fonts/AvenirBlack.woff') format('woff'),
+         url('../../fonts/AvenirBlack.ttf') format('truetype'),
+         url('../../fonts/AvenirBlack.svg#AvenirBlack') format('svg');
 }
 
 @font-face {
     font-family: 'Avenir';
-    src: url('../../fonts/AvenirLTPro-Light.eot');
-    src: url('../../fonts/AvenirLTPro-Light.eot') format('embedded-opentype'),
-         url('../../fonts/AvenirLTPro-Heavy.woff2') format('woff2'),
-         url('../../fonts/AvenirLTPro-Heavy.woff') format('woff'),
-         url('../../fonts/AvenirLTPro-Heavy.ttf') format('truetype'),
-         url('../../fonts/AvenirLTPro-Heavy.svg') format('svg');
+    src: url('../../fonts/AvenirRegular.eot');
+    src: url('../../fonts/AvenirRegular.eot') format('embedded-opentype'),
+         url('../../fonts/AvenirRegular.woff2') format('woff2'),
+         url('../../fonts/AvenirRegular.woff') format('woff'),
+         url('../../fonts/AvenirRegular.ttf') format('truetype'),
+         url('../../fonts/AvenirRegular.svg#AvenirRegular') format('svg');
 }
